# platform-atlas

./: .gitignore  .metadata.yaml  CHANGELOG.md  CLA.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml
GUIDES/: MANUAL_COLLECTION_GUIDE.md  OPERATORS_REFERENCE.md  PREREQUISITES-CHECKLIST.md  SSH_SETUP_GUIDE.md  USER-GUIDE-INSTALLATION-AND-USAGE.md  USER-GUIDE-READING-THE-REPORT.md
GUIDES/HTML/: PREREQUISITES-CHECKLIST.html  USER-GUIDE-INSTALLATION-AND-USAGE.html  USER-GUIDE-READING-THE-REPORT.html  sample_report.html
scripts/: atlas_extract_uris.sh  collect_platform.sh
src/platform_atlas/: RULES_KNOWLEDGEBASE.md  __init__.py  __main__.py  main.py
src/platform_atlas/capture/: __init__.py  batch_import.py  capture_engine.py  extended_captures.py  guided_collector.py  log_parser.py  models.py  modules_registry.py  ui.py  utils.py
src/platform_atlas/capture/collectors/: base.py  filesystem.py  gateway4.py  gateway4_api.py  gateway5.py  kubernetes.py  manual.py  mongo.py  platform.py  redis.py  system.py  systemd_discovery.py
src/platform_atlas/core/: _version.py  cli.py  config.py  context.py  credentials.py  dashboard.py  dispatch.py  environment.py  exceptions.py  html_collector.py  init_env.py  init_setup.py  json_utils.py  knowledgebase.py  log_config.py  paths.py  preflight.py  registry.py  rules.py  ruleset_manager.py  session_manager.py  theme.py  topology.py  transport.py  ui.py  utils.py  whats_new.py
src/platform_atlas/core/handlers/: __init__.py  config.py  customer.py  env.py  guide.py  preflight.py  ruleset.py  session.py
src/platform_atlas/guides/: architecture-form.html
src/platform_atlas/pipelines/: largestjobdata.json  largeworkflows.json  topworkflows.json
src/platform_atlas/reporting/: arch_renderer.py  diff_engine.py  operational_engine.py  operational_renderer.py  report_renderer.py  reporting_engine.py
src/platform_atlas/reporting/assets/templates/: arch.html  diff.html  operational.html  report.html  whats-new-1.5.html  whats-new-1.6.html
src/platform_atlas/rules/rulesets/: 20231-master-ruleset.json  p6-master-ruleset.json  rules.schema.json
src/platform_atlas/rules/rulesets/profiles/: 2023-dev-standalone-gateway4.json  2023-dev-standalone-gateway5.json  (+16 more)
src/platform_atlas/sessions/: customer_data.py
src/platform_atlas/validation/: extended_validation.py  operators.py  utils.py  validation_engine.py
